Add SMTP logic; Add Error handling; Fix some bugs

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -14,5 +14,12 @@
         "VariableName": "KEY_JWT_HotelListing",
         "lifetime": 60000
     },
+    "MailSettings": {
+        "Mail": "KwygonJin3107@gmail.com",
+        "DisplayName": "Mykola Bezghin",
+        "Password": "diqdporjzlppneoo",
+        "Host": "smtp.gmail.com",
+        "Port": 587
+    },
     "AllowedHosts": "*"
 }
