--- a/HotelListing/appsettings.Development.json
+++ b/HotelListing/appsettings.Development.json
@@ -4,6 +4,15 @@
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
-    }
+    },
+    "ConnectionStrings": {
+        "sqlConnection": "Server=DESKTOP-OEVE1QJ;Database=HotelListing_db;;MultipleActiveResultSets=true;;Integrated Security=True"
+    },
+    "Jwt": {
+        "Issuer": "HotelListingAPI",
+        "VariableName": "KEY_JWT_HotelListing",
+        "lifetime": 60000
+    },
+    "AllowedHosts": "*",
 }
 
