Add Default SMTP Email sending

--- a/HotelListing/appsettings.Example.json
+++ b/HotelListing/appsettings.Example.json
@@ -19,6 +19,7 @@
         "DisplayName": "user",
         "Password": "password",
         "Host": "smtp.host.com",
+        "EnableSsl": true,
         "Port": 587
     },
     "AllowedHosts": "*"
